# pom

./: .gitignore  Cargo.toml  README.md  cargo-test.profraw  test.sh
.github/workflows/: coverage.yml  rust-clippy.yml
bak/: main_old.rs
src/: app.rs  main.rs  main_old.rs  time.rs  timecard.rs
