[package]
name = "pom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.24.0"

[dev-dependencies]
cargo-llvm-cov = "0.5.39"
enigo = "0.1.3"
mockall = "0.12.0"
pretty_assertions = "1.4.0"
